; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/iccvid/extr_iccvid.c_cvid_v1_24.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/iccvid/extr_iccvid.c_cvid_v1_24.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32, i32, %struct.TYPE_3__*)* @cvid_v1_24 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cvid_v1_24(i8* %0, i8* %1, i32 %2, i32 %3, %struct.TYPE_3__* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_3__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.TYPE_3__* %4, %struct.TYPE_3__** %10, align 8
  %14 = load i32, i32* %9, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %5
  %17 = load i32, i32* %8, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %11, align 4
  br label %21

19:                                               ; preds = %5
  %20 = load i32, i32* %8, align 4
  store i32 %20, i32* %11, align 4
  br label %21

21:                                               ; preds = %19, %16
  store i32 0, i32* %13, align 4
  br label %22

22:                                               ; preds = %113, %21
  %23 = load i32, i32* %13, align 4
  %24 = icmp slt i32 %23, 4
  br i1 %24, label %25, label %116

25:                                               ; preds = %22
  %26 = load i8*, i8** %6, align 8
  %27 = load i32, i32* %13, align 4
  %28 = load i32, i32* %11, align 4
  %29 = mul nsw i32 %27, %28
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i8, i8* %26, i64 %30
  %32 = load i8*, i8** %7, align 8
  %33 = icmp ult i8* %31, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %25
  br label %116

35:                                               ; preds = %25
  store i32 0, i32* %12, align 4
  br label %36

36:                                               ; preds = %109, %35
  %37 = load i32, i32* %12, align 4
  %38 = icmp slt i32 %37, 4
  br i1 %38, label %39, label %112

39:                                               ; preds = %36
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 2
  %42 = load i32*, i32** %41, align 8
  %43 = load i32, i32* %12, align 4
  %44 = sdiv i32 %43, 2
  %45 = load i32, i32* %13, align 4
  %46 = sdiv i32 %45, 2
  %47 = mul nsw i32 %46, 2
  %48 = add nsw i32 %44, %47
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %42, i64 %49
  %51 = load i32, i32* %50, align 4
  %52 = trunc i32 %51 to i8
  %53 = load i8*, i8** %6, align 8
  %54 = load i32, i32* %13, align 4
  %55 = load i32, i32* %11, align 4
  %56 = mul nsw i32 %54, %55
  %57 = load i32, i32* %12, align 4
  %58 = mul nsw i32 %57, 3
  %59 = add nsw i32 %56, %58
  %60 = add nsw i32 %59, 0
  %61 = sext i32 %60 to i64
  %62 = getelementptr inbounds i8, i8* %53, i64 %61
  store i8 %52, i8* %62, align 1
  %63 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %64 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %63, i32 0, i32 1
  %65 = load i32*, i32** %64, align 8
  %66 = load i32, i32* %12, align 4
  %67 = sdiv i32 %66, 2
  %68 = load i32, i32* %13, align 4
  %69 = sdiv i32 %68, 2
  %70 = mul nsw i32 %69, 2
  %71 = add nsw i32 %67, %70
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds i32, i32* %65, i64 %72
  %74 = load i32, i32* %73, align 4
  %75 = trunc i32 %74 to i8
  %76 = load i8*, i8** %6, align 8
  %77 = load i32, i32* %13, align 4
  %78 = load i32, i32* %11, align 4
  %79 = mul nsw i32 %77, %78
  %80 = load i32, i32* %12, align 4
  %81 = mul nsw i32 %80, 3
  %82 = add nsw i32 %79, %81
  %83 = add nsw i32 %82, 1
  %84 = sext i32 %83 to i64
  %85 = getelementptr inbounds i8, i8* %76, i64 %84
  store i8 %75, i8* %85, align 1
  %86 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %87 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %86, i32 0, i32 0
  %88 = load i32*, i32** %87, align 8
  %89 = load i32, i32* %12, align 4
  %90 = sdiv i32 %89, 2
  %91 = load i32, i32* %13, align 4
  %92 = sdiv i32 %91, 2
  %93 = mul nsw i32 %92, 2
  %94 = add nsw i32 %90, %93
  %95 = sext i32 %94 to i64
  %96 = getelementptr inbounds i32, i32* %88, i64 %95
  %97 = load i32, i32* %96, align 4
  %98 = trunc i32 %97 to i8
  %99 = load i8*, i8** %6, align 8
  %100 = load i32, i32* %13, align 4
  %101 = load i32, i32* %11, align 4
  %102 = mul nsw i32 %100, %101
  %103 = load i32, i32* %12, align 4
  %104 = mul nsw i32 %103, 3
  %105 = add nsw i32 %102, %104
  %106 = add nsw i32 %105, 2
  %107 = sext i32 %106 to i64
  %108 = getelementptr inbounds i8, i8* %99, i64 %107
  store i8 %98, i8* %108, align 1
  br label %109

109:                                              ; preds = %39
  %110 = load i32, i32* %12, align 4
  %111 = add nsw i32 %110, 1
  store i32 %111, i32* %12, align 4
  br label %36

112:                                              ; preds = %36
  br label %113

113:                                              ; preds = %112
  %114 = load i32, i32* %13, align 4
  %115 = add nsw i32 %114, 1
  store i32 %115, i32* %13, align 4
  br label %22

116:                                              ; preds = %34, %22
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
